syntax = "proto3";
package example.pharmacy;

message CreateCustomer{
    string firstName = 1;
    string lastName = 2;
    int32 contact = 3;
}

message Response{
    int32 status = 1;
    string message = 2;
}

message CreateDoctor{
    string firstName = 1;
    string lastName = 2; 
    string email = 3;
    string specilization = 4;
    int32 contact = 5;
}


message GetCustomerInfoRequest {
    string customerId = 1;
}

message GetCustomerInfoResponse {
    int32 status = 1;
    string message = 2;
    repeated CreateCustomer customer = 3;
}

message Empty{

}

message UpdateRequest{
    string customerId = 1;
    string approved_medicine = 2;
    int32 quantity_given = 3;
}


